add wicked charts functionality

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+
 	<properties>
 		<wicket.version>6.11.0</wicket.version>
 		<jetty.version>7.6.3.v20120416</jetty.version>
@@ -117,11 +119,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
+          <!--
+          <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-spring-annot</artifactId>
             <version>${wicket-spring-annot.version}</version>
-            <!-- exclude spring framework that wicket pulls in -->
+            <! - - exclude spring framework that wicket pulls in - - >
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -129,6 +132,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        -->
         <!-- LOGGING DEPENDENCIES - LOG4J -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -156,7 +160,40 @@
 			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+
+          <dependency>
+              <!-- JRJC is distributed under the Apache 2.0 license. -->
+              <groupId>com.atlassian.jira</groupId>
+              <artifactId>jira-rest-java-client</artifactId>
+              <version>2.0.0-m2</version>
+              <exclusions>
+                  <exclusion>
+                      <!--
+                     Not excluding this will pull in both stax:stax-api:1.0.1 and javax.xml.stream:stax-api:1.0.2
+                     as transitive dependencies. We don't want both, and not excluding this will give you a duplicate
+                     warning when the dependencies are shaded into the jar by the maven-shade-plugin
+                      -->
+                      <groupId>stax</groupId>
+                      <artifactId>stax-api</artifactId>
+                  </exclusion>
+              </exclusions>
+          </dependency>
+          <dependency>
+              <groupId>com.pingunaut</groupId>
+              <artifactId>wicket-chartjs</artifactId>
+              <version>6.14.0</version>
+          </dependency>
+          <dependency>
+              <groupId>com.googlecode.wicked-charts</groupId>
+              <artifactId>wicked-charts-highcharts</artifactId>
+              <version>1.5.0</version>
+          </dependency>
+          <dependency>
+              <groupId>com.googlecode.wicked-charts</groupId>
+              <artifactId>wicked-charts-wicket6</artifactId>
+              <version>1.5.0</version>
+          </dependency>
+      </dependencies>
 	<build>
 		<resources>
 			<resource>
@@ -232,6 +269,27 @@
 					<downloadSources>true</downloadSources>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <transformers>
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>com.atlassian.jira.examples.Main</mainClass>
+                        </transformer>
+                    </transformers>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
@@ -246,5 +304,18 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+        <repository>
+            <id>atlassian-public</id>
+            <url>https://m2proxy.atlassian.com/repository/public</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+        </repository>
 	</repositories>
 	</project>
